SWATCH-1911: Remove deprecated GET /tally/products/{productId}